[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["dantheman8300 <daniel.7039@hotmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/dantheman8300/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
